peer-code-review feedback: fix contact section width on small screens

--- a/assets/css/small-screens.css
+++ b/assets/css/small-screens.css
@@ -114,10 +114,11 @@
         padding: 20px 0;
     }
 
-    #contact {
-      padding: 0;
-      display: flex;
-      justify-content: center;
+    #contact,
+    .contact-form {
+        padding: 0;
+        display: flex;
+        justify-content: center;
     }
 
     #success-message {
